# metadata-archivist

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Pipfile  README.md  pylintrc.toml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pre-commit.yml
examples/: 6cf9f46c-1168-44f4-a08f-d14f036384df.tgz  config.json  config_example_namelist.json  custom_parse.py  main.py  test_namelist.tgz
examples/example_from_schema/: main.py  metadata.json  metadata_archive.tar  my_parser.py  schema.json
examples/minimal_example/: config.json  main.py  metadata.json  metadata_archive.tar  my_parser.py  my_parsers.py  schema.json
examples/namelists/: main.py  metadata_archive.tar  my_parser.py  nml_schema.json
examples/namelists_example/: config.json  main.py  metadata.json  my_parser.py  schema.json
examples/ncdump_example/: config.json  main.py  metadata.json  metadata_archive.tar  my_parser.py  schema.json
examples/ncdump_example/tmp/metadata_archive/metadata_archive/mhm/: ncdump_hs.out
examples/schema_example1/: main.py  my_parser.py  my_parsers.py  schema.json
examples/schema_example2/: main.py  metadata.json  metadata_archive.tar  my_parser.py  my_parsers.py  schema.json
examples/schema_example2/metadata_archive/basin_danube/: basin.yml
examples/schema_example2/metadata_archive/basin_rhine/: basin.yml
examples/schema_example2/tmp/metadata_archive/metadata_archive/basin_danube/simulation/: config.yml  time.txt
examples/schema_example2/tmp/metadata_archive/metadata_archive/basin_rhine/simulation/: config.yml
examples/schema_example2/tmp/metadata_archive/metadata_archive/station_123456/simulation/: config.yml
examples/schema_example3/: main.py  metadata.json  metadata_archive.tar  my_parser.py  my_parsers.py  schema.json
examples/schema_example3/tmp/metadata_archive/metadata_archive/station_123456/: station.yml
examples/schema_example4/: main.py  metadata.json  my_parser.py  my_parsers.py  schema.json  schema_tutorial.ipynb
examples/schema_example4/raw_metadata/: config.yml
examples/schemas/: mem_schema.json  parser_schema.json
examples/tmp/test_namelist/test_namelist/: meminfo.out
src/metadata_archivist/: AParser.py  Archivist.py  Decompressor.py  Explorer.py  Exporter.py  Extractor.py  Formatter.py  FormatterHelpers.py  FormattingRules.py  InterpretationRules.py  Logger.py  Parser.py  ParserHelpers.py  SchemaInterpreter.py  __init__.py  archivist.py  decompressing_procedures.py  decompressor.py  decompressor_old.py  explorer.py  export_rules.py  exporter.py  exporting_procedures.py  formatter.py  formatting_rules.py  helper_classes.py  helper_functions.py  interpretation_rules.py  logger.py  parser.py  parsing_procedures.py  util.py
tests/: test_Cache.py  test_Parser.py
tests/test_data/: example_dummyfile.yaml
