[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metadata_archivist"
version = "0.7"
requires-python = ">=3.10.12"
authors = [
  { name="Jose Villamar", email="j.villamar@fz-juelich.de" },
  { name="Matthias Kelbling", email="matthias.kelbling@ufz.de" },
]
description = "A heterogeneous metadata file parsing and structuring framework"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.urls]
"Homepage" = "https://codebase.helmholtz.cloud/metamosim/metadata_archivist.git"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
