[metadata]
name = metadata_archivist
description = metadata_archivist - package handle metadata of workflows
long_description = file: README.md
long_description_content_type = text/markdown
author = Jose Villamar, Matthias Kelbling
author_email = j.villamar@fz-juelich.de, matthias.kelbling@ufz.de
maintainer = Jose Villamar, Matthias Kelbling
maintainer_email = j.villamar@fz-juelich.de, matthias.kelbling@ufz.de

[options]
package_dir = src/metadata_archivist
packages = metadata_archivist

[options.packages.find]
exclude =
    tests*
    docs*
